--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,12 @@ jobs:
         cache: 'yarn'
     - run: yarn
     - run: yarn run test
+
+    - name: Generate tag
+      id: generate_tag
+      run: |
+        SHA=$(echo $GITHUB_SHA | head -c7)
+        echo "sha=$SHA" >> $GITHUB_OUTPUT
       
     - name: Build docker image
-      run: docker build -t ci-api .
+      run: docker build -t ci-api:${{ steps.generate_tag.outputs.sha }} .
