--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,15 @@ jobs:
       run: |
         SHA=$(echo $GITHUB_SHA | head -c7)
         echo "sha=$SHA" >> $GITHUB_OUTPUT
+
+    - name: Login into the container registry
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
       
     - name: Build docker image
-      run: docker build -t ci-api:${{ steps.generate_tag.outputs.sha }} .
+      run: docker build -t 4592828/ci-api:${{ steps.generate_tag.outputs.sha }} .
+
+    - name: Push docker image
+      run: docker push 4592828/ci-api:${{ steps.generate_tag.outputs.sha }}
